--- a/index.html
+++ b/index.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TasteBuds Restaurant</title>
+  <title>The Steamy Spoon</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://kit.fontawesome.com/yourkitid.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="fontAwesome/css/all.css">
 </head>
-<body>
-  <header>
-    <img src="images/logo.png" alt="TasteBuds Logo" class="logo">
-    <h1>Welcome to TasteBuds</h1>
-    <p>Delicious meals, delivered with love ❤️</p>
-  </header>
+ <body class="body-home">
+             <div id="home">
+                   <img src="images/tss-logo.png" id="home-logo-img">
+                   <img src="images/tss-text.png" id="home-logo-text">
+               <div class="home-menu">
+                 <a href="meals.html" class="home-menu-item">
+                   <p>Meals</p>
+                 </a>
+                 <a href="starters.html" class="home-menu-item">
+                   <p>Starters</p>
+                 </a>
+                     <a href="drinks.html" class="home-menu-item">
+                   <p>Drinks</p>
+                 </a>
+                     <a href="deserts.html" class="home-menu-item">
+                   <p>deserts</p>
+                 </a>
 
-  <main>
-    <h2>Choose a Category</h2>
-    <ul class="categories">
-      <li><a href="category.html?cat=starters"><i class="fas fa-utensils"></i> Starters</a></li>
-      <li><a href="category.html?cat=meals"><i class="fas fa-drumstick-bite"></i> Main Meals</a></li>
-      <li><a href="category.html?cat=drinks"><i class="fas fa-coffee"></i> Drinks</a></li>
-      <li><a href="category.html?cat=desserts"><i class="fas fa-ice-cream"></i> Desserts</a></li>
-    </ul>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 TasteBuds Restaurant</p>
-  </footer>
-</body>
+               </div>
+            </div>
+         
+      </body>
 </html>
