--- a/index.html
+++ b/index.html
@@ -27,4 +27,7 @@
             </div>
          
       </body>
+<footer class="site-footer">
+  <p>&copy; 2025 The Steamy Spoon</p>
+</footer>
 </html>
