--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                    <p>Drinks</p>
                  </a>
                      <a href="deserts.html" class="home-menu-item">
-                   <p>deserts</p>
+                   <p>Deserts</p>
                  </a>
 
                </div>
