--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                    <img src="images/tss-logo.png" id="home-logo-img">
                    <img src="images/tss-text.png" id="home-logo-text">
                <div class="home-menu">
-                <a href="starters.html" class="home-menu-item">
+                <a href="category.html" class="home-menu-item">
                    <p>Starters</p>
                  </a>
                  <a href="meals.html" class="home-menu-item">
