--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
                    <img src="images/tss-logo.png" id="home-logo-img">
                    <img src="images/tss-text.png" id="home-logo-text">
                <div class="home-menu">
-                <a href="category.html" class="home-menu-item">
+                <a href="starters.html" class="home-menu-item">
                    <p>Starters</p>
                  </a>
-                 <a href="meals.html" class="home-menu-item">
-                   <p>Meals</p>
+                 <a href="category.html" class="home-menu-item">
+                   <p>Soups & Noodles</p>
+                 </a>
+                 <a href="mains.html" class="home-menu-item">
+                   <p>Mains</p>
                  </a>
                  
+                     <a href="desserts.html" class="home-menu-item">
+                   <p>Desserts</p>
+                 </a>
                      <a href="drinks.html" class="home-menu-item">
                    <p>Drinks</p>
-                 </a>
-                     <a href="deserts.html" class="home-menu-item">
-                   <p>Deserts</p>
                  </a>
 
                </div>
