--- a/starters.html
+++ b/starters.html
@@ -35,7 +35,7 @@
                       </a> 
                </div>  
             </div> 
-        <footer>
+        <footer class="site-footer">
     <a href="index.html">⬅ Back to Home</a>
   </footer>
       </body>
