--- a/starters.html
+++ b/starters.html
@@ -11,7 +11,7 @@
              <a href="index.html">
              <i class="fa-solid fa-arrow-left"></i>
              </a>
-      <img src="images/logo-text.png">
+      <img src="images/tss-text.png">
        </div>
              <div id="meals">
                  <div class="meals-list">
