--- a/starters.html
+++ b/starters.html
@@ -17,19 +17,19 @@
                  <div class="meals-list">
                       <a href="bites.html">
                        <div class="meals-list-item">
-                       <h1>Honey Glaze Pop Bites<i class="fa-light fa-square-caret-right"></i></h1>
+                       <h1>Honey Glaze Pop Bites<i class="fa-solid fa-square-up-right"></i></h1>
                        <p>bite-sized fried chicken glazed with sticky honey sauce.</p>
                        </div>
                       </a>  
                     <a href="pizza.html">
                        <div class="meals-list-item">
-                       <h1>Cheesy Pizza Rolls<i class="fa-light fa-square-caret-right"></i></h1>
+                       <h1>Cheesy Pizza Rolls<i class="fa-solid fa-square-up-right"></i></h1>
                        <p>golden rolls stuffed with mozzarella, marinara, and herbs.</p>
                        </div>
                       </a> 
                     <a href="potato.html">
                        <div class="meals-list-item">
-                       <h1>Crispy Potato Croquettes<i class="fa-light fa-square-caret-right"></i></h1>
+                       <h1>Crispy Potato Croquettes<i class="fa-solid fa-square-up-right"></i></h1>
                        <p>crunchy on the outside, creamy mashed potatoes inside.</p>
                        </div>
                       </a> 
