--- a/starters.html
+++ b/starters.html
@@ -37,4 +37,7 @@
             </div> 
 
       </body>
+      <footer class="site-footer">
+  <p>&copy; 2025 The Steamy Spoon</p>
+</footer>
 </html>
