--- a/starters.html
+++ b/starters.html
@@ -9,7 +9,7 @@
             
        <div class="header">
              <a href="index.html">
-             <i class="fa-solid fa-arrow-left"></i>
+             <i class="fa-light fa-circle-left"></i>
              </a>
       <img src="images/tss-text.png">
        </div>
