--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <a href="starters.html" class="home-menu-item">
                    <p>Starters</p>
                  </a>
-                 <a href="category.html" class="home-menu-item">
+                 <a href="soups.html" class="home-menu-item">
                    <p>Soups & Noodles</p>
                  </a>
                  <a href="mains.html" class="home-menu-item">
