--- a/bites.html
+++ b/bites.html
@@ -8,7 +8,7 @@
       <body class="body-meals">
             
        <div class="header">
-             <a href="index.html">
+             <a href="starters.html">
              <i class="fa-solid fa-arrow-left"></i>
              </a>
       <img src="images/tss-text.png">
@@ -22,6 +22,8 @@
                         <div class="item-details-info">
                               <p><b>Price: </b> R39:99</p>
                               <p style="float: right;"><b>Serving Size: </b> 8</p>
+
+                              <br>
                           <p>bite-sized fried chicken glazed with sticky honey sauce.</p>
                         </div>
                         <div class="item-details-ingredients">
