--- a/bites.html
+++ b/bites.html
@@ -29,16 +29,16 @@
                         <div class="item-details-ingredients">
                               <h2>Extras</h2>
                               
-                              <input id=:"check-01" type="checkbox">
+                              <input id="check-01" type="checkbox">
                               <label for="check-01">Extra Cheese</label>
                               <br>
-                              <input id=:"check-02" type="checkbox">
+                              <input id="check-02" type="checkbox">
                               <label for="check-02">Olives</label>
                               <br>
-                              <input id=:"check-03" type="checkbox">
+                              <input id="check-03" type="checkbox">
                               <label for="check-03">Side Salad</label>
                               <br>
-                              <input id=:"check-04" type="checkbox">
+                              <input id="check-04" type="checkbox">
                               <label for="check-04">Garlic Butter</label>
                               
 
