--- a/bites.html
+++ b/bites.html
@@ -30,16 +30,16 @@
                               <h2>Extras</h2>
                               
                               <input id="check-01" type="checkbox">
-                              <label for="check-01">Extra Cheese</label>
+                              <label for="check-01">Extra Sauce</label>
                               <br>
                               <input id="check-02" type="checkbox">
-                              <label for="check-02">Olives</label>
+                              <label for="check-02">Honey</label>
                               <br>
                               <input id="check-03" type="checkbox">
-                              <label for="check-03">Side Salad</label>
+                              <label for="check-03">chillie</label>
                               <br>
                               <input id="check-04" type="checkbox">
-                              <label for="check-04">Garlic Butter</label>
+                              <label for="check-04">Fried Chicken</label>
                               
 
                         </div>
