--- a/bites.html
+++ b/bites.html
@@ -36,7 +36,7 @@
                               <label for="check-02">Honey</label>
                               <br>
                               <input id="check-03" type="checkbox">
-                              <label for="check-03">chillie</label>
+                              <label for="check-03">Chillie</label>
                               <br>
                               <input id="check-04" type="checkbox">
                               <label for="check-04">Fried Chicken</label>
