--- a/pizza.html
+++ b/pizza.html
@@ -16,7 +16,7 @@
         
             <div id="item">
                   <div class="item-details">
-                        <img src="images/bites.png">
+                        <img src="images/pizza.png">
                         <h1>Cheesy Pizza Rolls</h1>
                         
                         <div class="item-details-info">
