--- a/thankyou.html
+++ b/thankyou.html
@@ -3,14 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Thank You - TasteBuds</title>
+  <title>The Steamy Spoon - Thank You</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="fontAwesome/css/all.css">
 </head>
-<body>
+<body class="body-home">
   <main class="thank-you">
-    <h1>🎉 Thank You for Your Order! 🎉</h1>
-    <p>Your delicious meal is on the way.</p>
-    <a href="index.html">Back to Homepage</a>
+    <h1><i class="fas fa-utensils"></i> Thank You for Your Order! <i class="fas fa-mug-hot"></i></h1>
+    <p>Your delicious meal from <strong>The Steamy Spoon</strong> is on its way. 🍲</p>
+    <a href="index.html" class="btn-home"><i class="fas fa-home"></i> Back to Homepage</a>
   </main>
 </body>
+<footer class="site-footer">
+  <p>&copy; 2025 The Steamy Spoon</p>
+</footer>
 </html>
+
