--- a/thankyou.html
+++ b/thankyou.html
@@ -7,7 +7,10 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="fontAwesome/css/all.css">
 </head>
+  
 <body class="body-home">
+   <img src="images/tss-logo.png" id="home-logo-img">
+                   <img src="images/tss-text.png" id="home-logo-text">
   <main class="thank-you">
     <h1><i class="fas fa-utensils"></i> Thank You for Your Order! <i class="fas fa-mug-hot"></i></h1>
     <p>Your delicious meal from <strong>The Steamy Spoon</strong> is on its way. 🍲</p>
