--- a/thankyou.html
+++ b/thankyou.html
@@ -13,7 +13,7 @@
                    <img src="images/tss-text.png" id="home-logo-text">
   <main class="thank-you">
     <h1><i class="fas fa-utensils"></i> Thank You for Your Order! <i class="fas fa-mug-hot"></i></h1>
-    <p>Your delicious meal from <strong>The Steamy Spoon</strong> is on its way. </p>
+    <p>Your delicious meal from is on its way. </p>
     <a href="index.html" class="btn-home"><i class="fas fa-home"></i> Back to Homepage</a>
   </main>
 </body>
