--- a/thankyou.html
+++ b/thankyou.html
@@ -14,7 +14,9 @@
   <main class="thank-you">
     <h1><i class="fas fa-utensils"></i> Thank You for Your Order! <i class="fas fa-mug-hot"></i></h1>
     <p>Your delicious meal from is on its way. </p>
-    <a href="index.html" class="btn-home"><i class="fas fa-home"></i> Back to Homepage</a>
+    <a href="index.html" class="btn-home">
+  <i class="fas fa-home"></i> Back to Homepage
+</a>
   </main>
 </body>
 <footer class="site-footer">
