--- a/thankyou.html
+++ b/thankyou.html
@@ -9,7 +9,8 @@
 </head>
   
 <body class="body-home">
-   <img src="images/tss-logo.png" id="home-logo-img">
+  <div>                
+  <img src="images/tss-logo.png" id="home-logo-img">
                    <img src="images/tss-text.png" id="home-logo-text">
   <main class="thank-you">
     <h1><i class="fas fa-utensils"></i> Thank You for Your Order! <i class="fas fa-mug-hot"></i></h1>
@@ -18,6 +19,7 @@
   <i class="fas fa-home"></i> Back to Homepage
 </a>
   </main>
+    </div>
 </body>
 <footer class="site-footer">
   <p>&copy; 2025 The Steamy Spoon</p>
