--- a/thankyou.html
+++ b/thankyou.html
@@ -16,7 +16,7 @@
     <h1><i class="fas fa-utensils"></i> Thank You for Your Order! <i class="fas fa-mug-hot"></i></h1>
     <p>Your delicious meal from is on its way. </p>
     <br>
-    <button type="submit"<a href="index.html">> <i class="fas fa-home"></i> Back to Homepage</button>
+    <button type="submit"> <a href="index.html"> <i class="fas fa-home"></i> Back to Homepage</a></button>
     
   </main>
     </div>
