--- a/thankyou.html
+++ b/thankyou.html
@@ -7,20 +7,21 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="fontAwesome/css/all.css">
 </head>
-  
-<body class="body-home">
-  <div>                
+<body>  
+<div class="body-home">
+                
   <img src="images/tss-logo.png" id="home-logo-img">
                    <img src="images/tss-text.png" id="home-logo-text">
-  <main class="thank-you">
+  <div class="thank-you">
     <h1><i class="fas fa-utensils"></i> Thank You for Your Order! <i class="fas fa-mug-hot"></i></h1>
     <p>Your delicious meal from is on its way. </p>
     <br>
     <button type="submit"> <a href="index.html"> <i class="fas fa-home"></i> Back to Homepage</a></button>
     
-  </main>
+        </div>
     </div>
 </body>
+  
 <footer class="site-footer">
   <p>&copy; 2025 The Steamy Spoon</p>
 </footer>
