--- a/thankyou.html
+++ b/thankyou.html
@@ -15,9 +15,11 @@
   <div class="thank-you">
     <h1><i class="fas fa-utensils"></i> Thank You for Your Order! <i class="fas fa-mug-hot"></i></h1>
     <p>Your delicious meal from is on its way. </p>
+   
+   <div class="item-details-text"> 
     <br>
     <button type="submit"> <a href="index.html"> <i class="fas fa-home"></i> Back to Homepage</a></button>
-    
+   </div>
         </div>
     </div>
 </body>
