--- a/thankyou.html
+++ b/thankyou.html
@@ -15,7 +15,7 @@
   <div class="item-details-text">
      <form action="index.html" method="get">
        <h1><i class="fas fa-utensils"></i> Thank You for Your Order! <i class="fas fa-mug-hot"></i></h1>
-             <p>Your delicious meal from is on its way. </p>
+             <p>Your delicious meal is on its way. </p>
              <button type="submit"><i class="fas fa-home"></i> Back to Homepage</button>
      </form>
   </div>
