--- a/bites.html
+++ b/bites.html
@@ -17,6 +17,8 @@
             <div id="item">
                   <div class="item-details">
                         <img src="images/bites.png">
+                  </did>
+                        <div class="item-details">
                         <h1>Honey Glaze Pop Bites</h1>
                         
                         <div class="item-details-info">
