--- a/bites.html
+++ b/bites.html
@@ -17,7 +17,7 @@
             <div id="item">
                   <div class="item-details">
                         <img src="images/bites.png">
-                  </did>
+                  </div>
                         <div class="item-details">
                         <h1>Honey Glaze Pop Bites</h1>
                         
