--- a/soul.html
+++ b/soul.html
@@ -8,7 +8,7 @@
       <body class="body-meals">
             
        <div class="header">
-             <a href="starters.html">
+             <a href="soups.html">
              <i class="fa-solid fa-arrow-left"></i>
              </a>
       <img src="images/tss-text.png">
