--- a/spicy.html
+++ b/spicy.html
@@ -16,7 +16,7 @@
         
             <div id="item">
                   <div class="item-details">
-                        <img src="images/soul.png">
+                        <img src="images/spicy.png">
                         <h1>Spicy Garlic Noodles</h1>
                         <div class="item-details-info">
                               <p><b>Price: </b> R64:99</p>
