--- a/mains.html
+++ b/mains.html
@@ -15,14 +15,14 @@
        </div>
              <div id="meals">
                  <div class="meals-list">
-                      <a href="chicken.html">
+                      <a href="honey.html">
                        <div class="meals-list-item">
                        <h1>Sticky Honey Fried Chicken<i class="fa-solid fa-square-up-right"></i></h1>
                        <p>crispy fried chicken coated in a sweet honey glaze.
                       </p>
                        </div>
                       </a>  
-                    <a href="meatloaf.html">
+                    <a href="loaf.html">
                        <div class="meals-list-item">
                        <h1>Country-Style Meatloaf Plate<i class="fa-solid fa-square-up-right"></i></h1>
                        <p>classic meatloaf with mashed potatoes and gravy.</p>
