--- a/desserts.html
+++ b/desserts.html
@@ -15,21 +15,21 @@
        </div>
              <div id="meals">
                  <div class="meals-list">
-                      <a href="chicken.html">
+                      <a href="apple.html">
                        <div class="meals-list-item">
                        <h1>Warm Apple Crumble<i class="fa-solid fa-square-up-right"></i></h1>
                        <p>spiced apple filling with a crunchy oat topping, served with cream.
                         </p>
                        </div>
                       </a>  
-                    <a href="meatloaf.html">
+                    <a href="lava.html">
                        <div class="meals-list-item">
                        <h1>Choco Lava Cake<i class="fa-solid fa-square-up-right"></i></h1>
                        <p> rich chocolate cake with a molten center.
                         </p>
                        </div>
                       </a> 
-                    <a href="rice.html">
+                    <a href="bean.html">
                        <div class="meals-list-item">
                        <h1>Vanilla Bean Pudding<i class="fa-solid fa-square-up-right"></i></h1>
                        <p>creamy, smooth pudding with a touch of vanilla.
