--- a/lava.html
+++ b/lava.html
@@ -16,10 +16,10 @@
         
             <div id="item">
                   <div class="item-details">
-                        <img src="images/apple.png">
+                        <img src="images/lava.png">
                         <h1>Choco Lava Cake</h1>
                         <div class="item-details-info">
-                              <p><b>Price: </b> R35:99</p>
+                              <p><b>Price: </b> R49:99</p>
                               <p style="float: right;"><b>Serving Size: </b> 1</p>
 
                               <br>
